# Endless-Driver

./: Makefile  README.md  func.c  func.h  game_elements.c  main.c  score.c  vars.h
data/: high_score.txt
src/: CMakeLists.txt  func.c  func.h  game_elements.c  main.c  vars.h
